# torchtune-does-math

./: LICENSE  README.md  pyproject.toml
torchtune-does-math/: custom_fft_single_device.py  custom_fft_single_device.yaml  custom_generate.py  custom_generation.yaml  custom_lora_single_device.py  custom_lora_single_device.yaml  dataset.py  sp_converter.py  tokenizer.py
torchtune-does-math/data/: download_number_theory.py  preproc.py
